[tool.poetry]
name = "caeh"
version = "0.1.0"
description = ""
authors = [<bfdi533@hotmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aioitertools = "0.11.0"
appdirs = "1.4.4"
asgiref = "3.7.2"
attrs = "19.3.0"
bcrypt = "3.1.7"
black = "20.8b1"
certifi = "2022.12.07"
chardet = "3.0.4"
charset-normalizer = "3.3.2"
click = "7.1.2"
coreschema = "0.0.4"
cryptography = "3.2"
django = "4.1.13"
django-axes = "5.25.0"
django-filter = "2.4.0"
django-ipware = "4.0.2"
djangorestframework = "3.12.4"
docutils = "0.15.2"
drf-api-tracking = "1.8.0"
elasticsearch = "7.16.1"
elastic-transport = "8.11.0"
fabric = "2.5.0"
fastparquet = "0.8.1"
greenlet = "3.0.3"
idna = "2.10"
importlib-metadata = "5.0.0"
importlib-resources = "6.1.1"
invoke = "1.4.1"
itypes = "1.2.0"
jinja2 = "3.1.2"
#jmespath = "0.10.0"
loguru = "0.5.0"
mypy-extensions = "0.4.3"
objsize = "0.6.1"
coreapi = "2.3.3"
pandas = "1.3.5"
paramiko = "2.7.1"
pathspec = "0.8.0"
pendulum = "2.1.2"
prettytable = "0.7.2"
progress = "1.5"
progress-bar = "8"
psycopg2 = "2.8.5"
psycopg2-binary = "2.9.9"
pycparser = "2.20"
pynacl = "1.4.0"
python-dateutil = "2.8.2"
python-decouple = "3.4"
pytz = "2023.3.post1"
pytzdata = "2020.1"
regex = "2023.12.25"
requests = "2.25.0"
s3transfer = "0.6.0"
scikit-learn = "1.0.2"
sentry-sdk = "1.9.0"
six = "1.16.0"
sqlalchemy = "1.4.15"
sqlparse = "0.4.4"
time-machine = "2.13.0"
toml = "0.10.1"
typing-extensions = "4.9.0"
tzdata = "2023.4"
uritemplate = "4.1.1"
#urllib3 = "1.26.6"
urllib3 = "<2"
zipp = "3.17.0"
s3fs = {extras = ["boto3"], version = ">=2023.12.0"}
#boto3 = "*"
#botocore = "*"
argparse = "^1.4.0"
tabulate = "0.9.0"
xmltodict = "0.13.0"
django-cors-headers = "^4.3.1"
pre-commit = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
